[gd_scene load_steps=4 format=3 uid="uid://dcrduduumuqin"]

[ext_resource type="Theme" uid="uid://dnjawm4lkym68" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_8aycf"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/EffectEditor/EffectEditor.gd" id="2_fmsuo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3iq4"]

[node name="EffectEditor" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8aycf")
script = ExtResource("2_fmsuo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0444444
anchor_right = 0.975
anchor_bottom = 0.956
offset_bottom = -0.160004
metadata/_edit_use_anchors_ = true

[node name="ToolBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NickNameLineEdit" type="LineEdit" parent="VBoxContainer/ToolBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Nickname"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ToolBox"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f3iq4")

[node name="AddEffect" type="Button" parent="VBoxContainer/ToolBox"]
layout_mode = 2
text = "Add Effect"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ToolBox"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_f3iq4")

[node name="Close" type="Button" parent="VBoxContainer/ToolBox"]
layout_mode = 2
text = "Close"

[node name="SearchBar" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search..."

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LineParent" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/ToolBox/AddEffect" to="." method="_on_add_effect_pressed"]
[connection signal="pressed" from="VBoxContainer/ToolBox/Close" to="." method="_on_close_pressed"]
[connection signal="text_changed" from="VBoxContainer/SearchBar" to="." method="_on_search_bar_text_changed"]
